--- a/plugin.xml
+++ b/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-           id="com.performanceactive.iospushplugin"
-      version="0.1.1">
-    <name>ParsePush iOS</name>
+           id="com.andiCR.iospushplugin"
+      version="0.1.2">
+    <name>ParsePush iOS 2</name>
     <description>phonegap parse plugin for iOS</description>
 
     <js-module src="www/cdv-plugin-parse.js" name="iOSParsePlugin">
@@ -33,6 +33,7 @@
         <framework src="StoreKit.framework" />
         <framework src="SystemConfiguration.framework" />
         <framework src="src/ios/Frameworks/Parse.framework" custom="true" />
+        <framework src="src/ios/Frameworks/Bolts.framework" custom="true" />
     </platform>
           
 </plugin>
