--- a/plugin.xml
+++ b/plugin.xml
@@ -6,14 +6,14 @@
     <name>ParsePush for Android and iOS</name>
     <description>phonegap parse plugin</description>
 
-    <js-module src="www/cdv-plugin-parse.js" name="ParsePushPlugin">
-        <clobbers target="window.ParsePushPlugin" />
+    <js-module src="www/cdv-plugin-parse.js" name="parsePlugin">
+        <clobbers target="window.parsePlugin" />
     </js-module>
 
     <!-- ios -->
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="iOSParsePlugin">
+            <feature name="ParsePlugin">
                 <param name="ios-package" value="CDVParsePlugin" />
             </feature>
         </config-file>
@@ -54,14 +54,6 @@
               <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
           </receiver>
-          <receiver android:name="com.parse.ParsePushBroadcastReceiver"
-            android:exported="false">
-            <intent-filter>
-              <action android:name="com.parse.push.intent.RECEIVE" />
-              <action android:name="com.parse.push.intent.DELETE" />
-              <action android:name="com.parse.push.intent.OPEN" />
-              </intent-filter>
-            </receiver>
           <receiver android:name="com.parse.GcmBroadcastReceiver"
               android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
