--- a/plugin.xml
+++ b/plugin.xml
@@ -6,7 +6,7 @@
     <name>ParsePush for Android and iOS</name>
     <description>phonegap parse plugin</description>
 
-    <js-module src="www/cdv-plugin-parse.js" name="parsePlugin">
+    <js-module src="www/cdv-plugin-parse.js" name="ParsePlugin">
         <clobbers target="window.parsePlugin" />
     </js-module>
 
